# ecs

./: .gitignore  CMakeLists.txt  Makefile  vcpkg-configuration.json
src/: ecs.h  hive.h  main.cpp  nostd.h
